try to fix startup cmdline; also echo variables
create docker image automatically via jenkins https://github.com/metasfresh/metasfresh-dist/issues/18