@@ -24,6 +24,22 @@ admin_port=${ADMIN_PORT:-9090}
 # self
 app_host=${APP_HOST:-app}
 
+echo_variable_values()
+{
+ echo "Note: all these variables can be set using the -e parameter."
+ echo ""
+ echo "DB_HOST=${db_host}"
+ echo "DB_PORT=${db_port}"
+ echo "DB_NAME=${db_name}"
+ echo "DB_USER=${db_user}"
+ echo "DB_PASSWORD=*******"
+ echo "ES_HOST=${es_host}"
+ echo "ES_PORT=${es_port}"
+ echo "ADMIN_HOST=${admin_host}"
+ echo "ADMIN_PORT=${admin_port}"
+ echo "APP_HOST=${app_host}"
+}
+
 set_properties()
 {
  local prop_file="$1"
@@ -71,21 +87,26 @@ wait_dbms()
 
 run_metasfresh()
 {
+ local admin_url="http://${admin_host}:${admin_port}"
+ local metasfresh_admin_params="-Dspring.boot.admin.url=${admin_url} -Dmanagement.security.enabled=false -Dspring.boot.admin.client.prefer-ip=true"
+
+ local es_params="-Dspring.data.elasticsearch.cluster-nodes=${es_host}:${es_port}"
+
  cd /opt/metasfresh/ \
  && java \
  -Dsun.misc.URLClassPath.disableJarChecking=true \
  -Xmx1024M \
- -XX:MaxPermSize=512M \
  -XX:+HeapDumpOnOutOfMemoryError \
- -Dspring.data.elasticsearch.cluster-nodes=${es_host}:${es_port} \
- -Dspring.boot.admin.url=http://${admin_host}:${admin_port} \
- -Dmanagement.security.enabled=false \
+ ${es_params} \
+ ${metasfresh_admin_params} \
  -DPropertyFile=/opt/metasfresh/metasfresh.properties \
  -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8788 \
  -jar metasfresh-app.jar
 }
 
 # run_install
+
+echo_variable_values
 
 set_properties /opt/metasfresh/metasfresh.properties
 set_properties /opt/metasfresh/local_settings.properties
